# drf-api

./: db.sqlite3  docker-compose.yml  pyproject.toml
blog_project/: settings.py
